# aoc2025

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
02/: Cargo.toml
02/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
sam/: Cargo.toml
sam/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
